--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -10,5 +10,6 @@ jobs:
         - name: build image
           run: docker build . -t 9769268529/my-vite-image:latest
         - name: push image to docker hub
-          run:
+          run: |
+            docker login -u 9769268529 -p ${{secrets.DOCKER_TOKEN}}
             docker push 9769268529/my-vite-image:latest
