--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -9,7 +9,7 @@ jobs:
         - name: checkout
           uses: actions/checkout@v4
         - name: build image
-          run: docker build . -t 9769268529/my-vite-image:latest
+          run: docker build ./ -t 9769268529/my-vite-image:latest
         - name: push image to docker hub
           run: |
             docker login -u 9769268529 -p ${{secrets.DOCKER_TOKEN}}
