--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -1,16 +1,41 @@
-name: Build and Publish image to Docker hub
-on: 
-  [workflow_dispatch]
+name: Build and Push Docker Image
+
+on:
+  push:
+    branches:
+      - main
+  workflow_dispatch:
 
 jobs:
-  publish_images:
+  build-and-push:
     runs-on: ubuntu-latest
-      steps:
-        - name: checkout
-          uses: actions/checkout@v4
-        - name: build image
-          run: docker build ./ -t 9769268529/my-vite-image:latest
-        - name: push image to docker hub
-          run: |
-            docker login -u 9769268529 -p ${{secrets.DOCKER_TOKEN}}
-            docker push 9769268529/my-vite-image:latest
+
+    steps:
+      # Checkout the repository
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      # Log in to Docker Hub
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      # Set up Docker Buildx
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      # Build and push the Docker image
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          push: true
+          tags: |
+            ${{ secrets.DOCKER_USERNAME }}/vite-image:latest
+            ${{ secrets.DOCKER_USERNAME }}/vite-image:${{ github.sha }}
+
+      # Optionally, log out from Docker Hub
+      - name: Log out from Docker Hub
+        run: docker logout
