--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -1,41 +1,25 @@
-name: Build and Push Docker Image
+name: Build and Publish image to Docker hub
 
 on:
-  push:
+  push: 
     branches:
       - main
   workflow_dispatch:
 
 jobs:
-  build-and-push:
+  publish_images:
     runs-on: ubuntu-latest
+      steps:
+      # Checkout the repo.
+        - name: Checkout Code
+          uses: actions/checkout@v4
 
-    steps:
-      # Checkout the repository
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      # Log in to Docker Hub
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      # Set up Docker Buildx
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      # Build and push the Docker image
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v3
-        with:
-          context: .
-          push: true
-          tags: |
-            ${{ secrets.DOCKER_USERNAME }}/vite-image:latest
-            ${{ secrets.DOCKER_USERNAME }}/vite-image:${{ github.sha }}
-
-      # Optionally, log out from Docker Hub
-      - name: Log out from Docker Hub
-        run: docker logout
+      # Build image.    
+        - name: build image
+          run: docker build ./dist -t 9769268529/vite-image:latest
+      
+      # Push image to docker hub    
+        - name: push image to docker hub
+          run: |
+            docker login -u 9769268529 -p ${{secrets.DOCKER_TOKEN}}
+            docker push 9769268529/vite-image
