versoin in yml changed 7

--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -16,7 +16,7 @@ jobs:
 
       # Build image.
       - name: build image
-        run: docker build ./dist -t 9769268529/vite-image:latest
+        run: docker build . -t 9769268529/vite-image:latest
 
       # Push image to docker hub
       - name: push image to docker hub
